@@ -113,7 +113,6 @@ for its multidimensional numeric arrays.
 
 
 <p><big><b><u>Todo / Ideas</u></b></big> (feel free to submit)<br><ul>
-<li>unify more types/classes for python 2.2</li>
 <li>transform.skew() function</li>
 <li>transform.scroll() function</li>
 <li>image filtering (colors,blurs,etc)</li>
@@ -123,6 +122,9 @@ for its multidimensional numeric arrays.
 <li>draw with transparancy</li>
 <li>draw large sets of primitives with a single call</li>
 <li>drawing offsets, perhaps as subsurfaces</li>
+<li>new scale2x, scale3x, and scale4x from hiend3d</li>
+<li>switch Numeric to numarray (see docs on how to do both)</li>
+<li>audio resampling</li>
 </ul></p><br>
 
 
